feat(tooling): add pnpm verify command for pre-PR checks
- Add lightweight verify script in package.json
  - Runs: format:check && lint:affected && type-check:affected && test:affected
  - Uses affected commands for faster iteration during development
  - Can be run before creating a PR to catch issues early

- Update docs/ai/skills/verification.md
  - Document the new pnpm verify command
  - Specify the exact implementation
  - Show in PR evidence template

Ref: docs/workflow-improvements/implementation-plan.md (Phase 2)

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "test:shadcnui": "nx test shadcnui",
     "type-check:affected": "nx affected --target=type-check",
     "type-check:all": "nx run-many --target=type-check --all",
+    "verify": "pnpm format:check && pnpm lint:affected && pnpm type-check:affected && pnpm test:affected",
     "type-check:client": "nx run client:type-check",
     "type-check:shadcnui": "nx run shadcnui:type-check",
     "validate": "pnpm run format && pnpm run lint:all && pnpm run type-check:all && pnpm run test:all && pnpm run build:all"
